Use quarkus-github-app instead of just quarkus-github-api
As a full-blown GitHub app, we will be able to install the application
on multiple repos and manage permissions more easily.

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,10 @@
 = Quarkus GitHub Lottery
 
-> A Quarkus-powered application that regularly sends short lists of GitHub issues for triagers/maintainers to consider.
+> A Quarkus-powered GitHub App that regularly sends short lists of GitHub issues for triagers/maintainers to consider.
+
+== Introduction
+
+This GitHub App is based on the https://github.com/quarkiverse/quarkus-github-app[Quarkus GitHub App framework].
 
 == How to use/configure
 
