Small fixes in README.adoc

--- a/README.adoc
+++ b/README.adoc
@@ -145,13 +145,6 @@ These issues have the `needs-reproducer` label,
 and it looks like someone who is not from the Quarkus team was the last to comment on the issue,
 quite some time ago.
 +
-A reproducer might have been provided recently on such an issue, in which case we need to remove the `needs-reproducer` label
-and have a closer look.
-Reproducer Provided::
-These issues have the `needs-reproducer` label,
-and it looks like someone who is not from the Quarkus team was the last to comment on the issue,
-quite some time ago.
-+
 There might be a reproducer there, in which case you might want to remove the `needs-reproducer` label
 and have a closer look.
 Stale::
@@ -228,7 +221,8 @@ Here is a link to the application on GitHub: https://github.com/apps/quarkus-git
 The configuration file https://github.com/quarkusio/quarkus/blob/main/.github/quarkus-github-lottery.yml[`.github/quarkus-github-lottery.yml`]
 includes several sections that are common to all participants to the lottery:
 
-```yaml
+[source,yaml]
+----
 notifications:
   createIssues:
     repository: "quarkusio/quarkus-github-lottery-reports"
@@ -249,7 +243,8 @@ buckets:
     stale:
       delay: P60D
       timeout: P14D
-```
+# [...]
+----
 
 `notifications.createIssues.repository`::
 The full name of the GitHub repository where "reports"/"notification issues" will be created.
@@ -328,7 +323,7 @@ which may happen frequently in dev mode in particular.
 [[contributing]]
 == Contributing
 
-To participate to the development of this GitHub App, create a playground project in your own org and
+To participate in the development of this GitHub App, create a playground project in your own org and
 follow the steps outlined in https://quarkiverse.github.io/quarkiverse-docs/quarkus-github-app/dev/index.html[the Quarkus GitHub App documentation].
 
 When registering your app, request the following Repository permissions:
