Align README on search.quarkus.io

--- a/README.adoc
+++ b/README.adoc
@@ -431,10 +431,14 @@ And subscribe to the following events:
 [[deployment]]
 == Deployment
 
-Deployment should happen automatically when pushing to the `main` branch.
+Maintainers can review the application and update configuration/secrets on the OpenShift console.
 
-Maintainers can review the application and update configuration/secrets
-at https://console-openshift-console.apps.ospo-osci.z3b1.p1.openshiftapps.com/
+There is only one namespace at the moment:
+
+* Production (`main` branch):
+** Console: https://console-openshift-console.apps.ospo-osci.z3b1.p1.openshiftapps.com/k8s/cluster/projects/prod-quarkus-github-lottery
+
+Deployment will happen automatically when pushing to the relevant branch.
 
 Be careful about which configuration you change in the UI,
 as deployment may overwrite part of the topology.
